syntax = "proto3";

service PersonInform {
  rpc GetPersons (PersonRequest) returns (PersonsResponse);
}

message PersonRequest {
  int32 count = 1;
}

message Person {
	int32 id = 1;
	string surname = 2;
	string firstname = 3;
	int32 age = 4;
}

message PersonsResponse {
  repeated Person persons = 1;
}